add repository to package.json

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "name": "pack-zip",
   "optionalDependencies": {},
   "readme": "ERROR: No README data found!",
+  "repository": "https://github.com/Merlin-Taylor/node-pack-zip.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
