--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "pack-zip": "bin/pack-zip.js"
   },
   "dependencies": {
-    "tar-to-zip": "^1.3.0"
+    "archiver": "^1.3.0",
+    "bluebird": "^3.5.0",
+    "globby": "^6.1.0"
   },
   "description": "Run npm pack and convert the output from a .tar.gz file to a .zip file",
   "eslintConfig": {
@@ -41,7 +43,7 @@
     "url": "https://github.com/Merlin-Taylor/node-pack-zip.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node bin/pack-zip.js"
   },
   "version": "0.0.1"
 }
