--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "email": "code.merlin.taylor@gmail.com"
   },
   "bin": {
-    "pack-zip": "bin/pack-zip.js"
+    "repack-zip": "bin/repack-zip.js"
   },
   "dependencies": {
     "archiver": "^1.3.0",
     "bluebird": "^3.5.0",
     "globby": "^6.1.0"
   },
-  "description": "Run npm pack and convert the output from a .tar.gz file to a .zip file",
+  "description": "Zips a node module with its declared dependencies.",
   "eslintConfig": {
     "env": {
       "es6": true,
@@ -24,6 +24,7 @@
   },
   "keywords": [
     "pack",
+    "dependencies",
     "lambda",
     "zip"
   ],
@@ -31,16 +32,16 @@
   "main": "index.js",
   "maintainers": [
     {
-      "name": "merlin-taylor",
-      "email": "code.merlin.taylor@gmail.com"
+      "name": "Jacques-Olivier Goussard",
+      "email": "jogoussard@gmail.com"
     }
   ],
   "name": "pack-zip",
   "optionalDependencies": {},
-  "readme": "ERROR: No README data found!",
+  "readme": "README.md",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Merlin-Taylor/node-pack-zip.git"
+    "url": "https://github.com/jogoussard/node-repack-zip.git"
   },
   "scripts": {
     "test": "node bin/pack-zip.js"
