--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "author": {
+    "name": "Jacques-Olivier Goussard",
+    "email": "jogoussard@gmail.com"
+  },
+  "contributors": [{
     "name": "Merlin Taylor",
     "email": "code.merlin.taylor@gmail.com"
-  },
+   }],
   "bin": {
     "repack-zip": "bin/repack-zip.js"
   },
@@ -46,5 +50,5 @@
   "scripts": {
     "test": "node bin/pack-zip.js"
   },
-  "version": "0.2.2"
+  "version": "0.2.3"
 }
